# ISRO_GeoNLI

./: .gitignore  README.md  cursor-prompt-simplified.md  docker-compose.yml  implementation-quick-ref-simplified.md  multimodal-chatbot-simplified.md
Frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
Frontend/src/: index.css
Frontend/src/assets/: radar.json  satellite.json
Frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  HistoryModal.tsx  OrbitLogo.tsx  ProcessingIndicator.tsx  Sidebar.tsx  SpaceBackground.tsx  TopBar.tsx
Frontend/src/components/ui/: breadcrumb.tsx  carousel.tsx  chart.tsx  dialog.tsx  navigation-menu.tsx  separator.tsx  sidebar.tsx  toggle-group.tsx
Frontend/src/lib/: api.ts  constant.ts  routes.ts
Frontend/src/pages/: ChatHistoryPage.tsx  Home.tsx  LandingPage.tsx
Frontend/src/styles/: globals.css
Frontend/src/types/: chat.ts  message.ts
Frontend/src/utils/: SyncToBackend.tsx  api.ts
TODO/: modality_router.py  resent.py
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  STRUCTURE.md  init_db.py  pyproject.toml  requirements.txt  run.py  setup.sh  start.sh
backend/app/: config.py  main.py  orchestrator.py
backend/app/api/: deps.py
backend/app/api/routes/: chat_routes.py  image_upload.py  orchestrator_routes.py  query_routes.py  user_routes.py
backend/app/core/: checkpoint.py  database.py  s3.py
backend/app/models/: chat.py  message.py  query.py  session.py  user.py  user_memory.py
backend/app/schemas/: chat_schema.py  message_schema.py  orchestrator_schema.py  query_schema.py  session_schema.py  user_memory_schema.py  user_schema.py
backend/app/services/: chat_service.py  ir2rgb_service.py  memory_service.py  modal_client.py  modality_router.py  query_service.py  resnet_classifier_client.py  user_service.py
backend/app/utils/: session_manager.py
backend/ir2rgb_models/: ir2rgb_model.py
backend/modal_services/: ASYNC_API_DOCS.md  Basic_vqa_caption.md  README.md  captioning.py  deploy_vlm.py  grounding.py  ir.py  pyproject.toml  resnet_classifier.py  sar.py  schemas.py  upload_resnet_weights.py  vqa.py
backend/modal_services/utils/: merge_and_save.py  request.py  upload_resnet_weights.py
backend/resnet_models/: README.md  resnet_model.py
backend/scripts/: ir_merge.py  sar_merge.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini
backend/tests/fixtures/: __init__.py  test_data.py
backend/tests/integration/: __init__.py  test_orchestrator.py  test_orchestrator_routes.py
backend/tests/unit/: __init__.py  test_buffer_manager.py  test_ir2rgb_service.py  test_memory_service.py  test_modality_router.py  test_resnet_client.py  test_sample_image.py  test_sample_images_batch.py  test_schemas.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/assets/: radar.json
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Dropzone.tsx  ExploreSamplesPage.tsx  HistoryModal.tsx  Sidebar.tsx  SpaceBackground.tsx  TopBar.tsx
frontend/src/components/ui/: accordion.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  menubar.tsx  pagination.tsx  popover.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx  table.tsx  toggle.tsx  tooltip.tsx
frontend/src/lib/: api.ts  constant.ts  routes.ts
frontend/src/pages/: ChatHistoryPage.tsx  ExploreSamplesPage.tsx  Home.tsx
frontend/src/types/: chat.ts
frontend/src/utils/: SyncToBackend.tsx
ir2rgb_models/: README.md
ir2rgb_models/model_weights/: models_ir_rgb.npz
lol/: package-lock.json
lol/src/assets/: satellite.json
lol/src/components/: ChatInput.tsx  ChatMessage.tsx  Dropzone.tsx  InitialOptions.tsx  ProcessingIndicator.tsx
lol/src/components/ui/: alert-dialog.tsx  label.tsx  tabs.tsx
lol/src/lib/: routes.ts
lol/src/pages/: ChatHistoryPage.tsx  Home.tsx  LandingPage.tsx
lol/src/services/: chatService.ts
lol/src/types/: message.ts
modal_services/: ASYNC_API_DOCS.md  captioning.py  grounding.py  requirements.txt  resnet_classifier.py  upload_resnet_weights.py
nothing_0435-feat-fcc_handling/: README.md  scc_handling.py
prod-backend/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
prod-backend/app/: main.py
prod-backend/app/api/v1/: router.py
prod-backend/app/core/: config.py  database.py  logging_middleware.py
prod-backend/app/db/: models.py
prod-backend/app/schemas/: test_structure.py
prod-backend/app/services/: classifier.py  fcc_converter.py  ir_converter.py  modal_registry.py  orchestrator.py  s3_service.py
prod-backend/app/services/modalities/: ir_handler.py  (+1 more)
resnet_models/: README.md
(+4 files in other folders)
