[project]
name = "modal-services"
version = "0.1.0"
description = "Modal services for VLM deployment (Grounding, VQA, Captioning)"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.60.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

